Create basic model, repo, helpers, and bootstrap

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=restful-api-practice
+
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
 
