--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=restful-api-practice
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
 
+api.controller.v1.enabled=true
+api.controller.v2.enabled=true
