--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,13 @@ spring.h2.console.enabled=true
 
 spring.datasource.generate-unique-name=false
 spring.datasource.name=devdb
+spring.datasource.url=jdbc:h2:mem:devdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.com=debug
 logging.level.com.kentcarmine.restapipractice=debug
@@ -14,3 +21,4 @@ logging.level.com.kentcarmine.restapipractice=debug
 #spring.jpa.properties.hibernate.format_sql=true
 #show bind params
 #logging.level.org.hibernate.type.descriptor.sql=trace
+
